--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Environment files
 .env
+.env.*
+!.env.example
+
 node_modules
 dist
 dist-ssr
